--- a/pizzapastawebtemplate/templates/operator.html
+++ b/pizzapastawebtemplate/templates/operator.html
@@ -1,4 +1,3 @@
-<!-- operator.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -43,7 +42,7 @@
                     <td>{{ order.customer_name }}</td>
                     <td>{{ order.order_details }}</td>
                     <td id="status-{{ order.id }}">{{ order.status }}</td>
-                    <td>
+                    <td id="update-status-{{ order.id }}">
                         {% if order.status == 'Open' %}
                             <button id="close-btn-{{ order.id }}" onclick="closeOrder('{{ order.id }}')">Close</button>
                         {% else %}
@@ -66,7 +65,6 @@
         function closeOrder(orderId) {
             var closeButton = document.getElementById(`close-btn-${orderId}`);
             closeButton.disabled = true;
-            closeButton.classList.add('disabled-button');
 
             fetch(`/close_order/${orderId}`, {
                 method: 'POST',
@@ -79,16 +77,17 @@
                     alert(`Order ${orderId} closed successfully`);
                     var statusCell = document.getElementById(`status-${orderId}`);
                     statusCell.innerText = 'Closed';
+                    
+                    var updateStatusCell = document.getElementById(`update-status-${orderId}`);
+                    updateStatusCell.innerHTML = '';
                 } else {
                     alert('Failed to close order');
                     closeButton.disabled = false;
-                    closeButton.classList.remove('disabled-button');
                 }
             })
             .catch(error => {
                 console.error('Error closing order:', error);
                 closeButton.disabled = false;
-                closeButton.classList.remove('disabled-button');
             });
         }
 
