LNO Italian BISTRO

--- a/pizzapastawebtemplate/templates/customer.html
+++ b/pizzapastawebtemplate/templates/customer.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Welcome - Liberteri Italiano Web Template</title>
+    <title>LNO Italian BISTRO</title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
