--- a/pizzapastawebtemplate/templates/index.html
+++ b/pizzapastawebtemplate/templates/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Liberteri Italiano Web Template</title>
+    <title>LNO Italian BISTRO</title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
     <!--[if IE 6]>
       <link rel="stylesheet" type="text/css" href="css/ie6.css" />
