--- a/pizzapastawebtemplate/templates/about.html
+++ b/pizzapastawebtemplate/templates/about.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>About - Pizza Pasta Web Template</title>
+	<title>LNO Italian BISTRO</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<!--[if IE 6]>
 		<link rel="stylesheet" type="text/css" href="css/ie6.css">
