--- a/pizzapastawebtemplate/templates/login.html
+++ b/pizzapastawebtemplate/templates/login.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Login - Liberteri Italiano Web Template</title>
+	<title>LNO Italian BISTRO</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<!--[if IE 6]>
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/ie6.css') }}">
