--- a/pizzapastawebtemplate/templates/operator.html
+++ b/pizzapastawebtemplate/templates/operator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operator - Open Orders</title>
+    <title>LNO Italian BISTRO</title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
 <body>
