--- a/pizzapastawebtemplate/templates/menu.html
+++ b/pizzapastawebtemplate/templates/menu.html
@@ -35,88 +35,88 @@
 						<li class="first">
 							<table>
 								<tr>
-									<td>Salami and Cheese</td>
+									<td>Pizza Margarita</td>
+									<td><span>$12.50</span></td>
+								</tr>
+								<tr>
+									<td>Pizza Alfredo</td>
+									<td><span>$17.00</span></td>
+								</tr>
+								<tr>
+									<td>Pizza Truffle</td>
+									<td><span>$30.00</span></td>
+								</tr>
+								<tr>
+									<td>Pizza Funghi</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Ripacotta</td>
+									<td>Pizza Bianca</td>
+									<td><span>$26.50</span></td>
+								</tr>
+								<tr>
+									<td>Pizza Varda Bianca</td>
+									<td><span>$27.00</span></td>
+								</tr>
+								<tr>
+									<td>Kalamata Pizza</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Terracotta on wheat</td>
-									<td><span>$24.50</span></td>
+									<td>Mushroom Pizza</td>
+									<td><span>$32.50</span></td>
 								</tr>
 								<tr>
-									<td>Ham and cheese</td>
-									<td><span>$24.50</span></td>
+									<td>Bianca Salmon Pizza</td>
+									<td><span>$35.00</span></td>
 								</tr>
 								<tr>
-									<td>Burroli</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>La Pieta</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Cheverkybebab</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Pastrami and Rye</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Delicateseen</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Michael&#39;s Special</td>
-									<td><span>$24.50</span></td>
+									<td>Feta Pizza</td>
+									<td><span>$25.00</span></td>
 								</tr>
 							</table>
 						</li>
 						<li>
 							<table>
 								<tr>
-									<td>Salami and Cheese</td>
+									<td>Polenta Pizza</td>
+									<td><span>$26.50</span></td>
+								</tr>
+								<tr>
+									<td>5 Cheeses Pizza</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Ripacotta</td>
+									<td>Marinara Pizza</td>
+									<td><span>$24.00</span></td>
+								</tr>
+								<tr>
+									<td>Sicilian Pizza</td>
+									<td><span>$22.00</span></td>
+								</tr>
+								<tr>
+									<td>Romano Pizza</td>
+									<td><span>$21.50</span></td>
+								</tr>
+								<tr>
+									<td>Brie Pizza</td>
+									<td><span>$23.00</span></td>
+								</tr>
+								<tr>
+									<td>Spicy Pizza</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Terracotta on wheat</td>
-									<td><span>$24.50</span></td>
+									<td>Vegan Pizza</td>
+									<td><span>$30.50</span></td>
 								</tr>
 								<tr>
-									<td>Ham and cheese</td>
-									<td><span>$24.50</span></td>
+									<td>Alfredo Pizza</td>
+									<td><span>$20.50</span></td>
 								</tr>
 								<tr>
-									<td>Burroli</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>La Pieta</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Cheverkybebab</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Pastrami and Rye</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Delicateseen</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Michael&#39;s Special</td>
-									<td><span>$24.50</span></td>
+									<td>Gluten Free Pizza</td>
+									<td><span>$37.50</span></td>
 								</tr>
 							</table>
 						</li>
@@ -131,88 +131,88 @@
 						<li class="first">
 							<table>
 								<tr>
-									<td>Salami and Cheese</td>
+									<td>Rose Pasta</td>
+									<td><span>$17.00</span></td>
+								</tr>
+								<tr>
+									<td>Basil pesto pasta</td>
+									<td><span>$16.50</span></td>
+								</tr>
+								<tr>
+									<td>Spinach Taliatelle</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Ripacotta</td>
+									<td>Truffle Gnocci</td>
+									<td><span>$22.50</span></td>
+								</tr>
+								<tr>
+									<td>Mixed cheese Tortellini</td>
+									<td><span>$25.00</span></td>
+								</tr>
+								<tr>
+									<td>Fettuccine Truffle</td>
+									<td><span>$32.00</span></td>
+								</tr>
+								<tr>
+									<td>Artichoke Aglio e Olio</td>
+									<td><span>$21.50</span></td>
+								</tr>
+								<tr>
+									<td>Pasta Aribiata</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Terracotta on wheat</td>
-									<td><span>$24.50</span></td>
+									<td>Ricotta Tortellini</td>
+									<td><span>$26.00</span></td>
 								</tr>
 								<tr>
-									<td>Ham and cheese</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Burroli</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>La Pieta</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Cheverkybebab</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Pastrami and Rye</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Delicateseen</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Michael&#39;s Special</td>
-									<td><span>$24.50</span></td>
+									<td>Linguine from the Sea</td>
+									<td><span>$23.50</span></td>
 								</tr>
 							</table>
 						</li>
 						<li>
 							<table>
 								<tr>
-									<td>Salami and Cheese</td>
+									<td>Sweet potato Ravioli</td>
+									<td><span>$22.00</span></td>
+								</tr>
+								<tr>
+									<td>Salmon Linguine</td>
+									<td><span>$18.50</span></td>
+								</tr>
+								<tr>
+									<td>Cacio e Pepe</td>
+									<td><span>$28.50</span></td>
+								</tr>
+								<tr>
+									<td>Butter Pappardella</td>
 									<td><span>$24.50</span></td>
 								</tr>
 								<tr>
-									<td>Ripacotta</td>
-									<td><span>$24.50</span></td>
+									<td>Tomato Pappardella</td>
+									<td><span>$24.00</span></td>
 								</tr>
 								<tr>
-									<td>Terracotta on wheat</td>
-									<td><span>$24.50</span></td>
+									<td>Lemon Spaghetti</td>
+									<td><span>$29.00</span></td>
 								</tr>
 								<tr>
-									<td>Ham and cheese</td>
-									<td><span>$24.50</span></td>
+									<td>Soft Cheese Tortellini</td>
+									<td><span>$19.00</span></td>
 								</tr>
 								<tr>
-									<td>Burroli</td>
-									<td><span>$24.50</span></td>
+									<td>Parmesan Ravioli</td>
+									<td><span>$22.50</span></td>
 								</tr>
 								<tr>
-									<td>La Pieta</td>
-									<td><span>$24.50</span></td>
+									<td>Mushroom cream Pasta</td>
+									<td><span>$23.00</span></td>
 								</tr>
 								<tr>
-									<td>Cheverkybebab</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Pastrami and Rye</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Delicateseen</td>
-									<td><span>$24.50</span></td>
-								</tr>
-								<tr>
-									<td>Michael&#39;s Special</td>
-									<td><span>$24.50</span></td>
+									<td>Leek Cream Pasta</td>
+									<td><span>$16.50</span></td>
 								</tr>
 							</table>
 						</li>
