--- a/pizzapastawebtemplate/templates/admin.html
+++ b/pizzapastawebtemplate/templates/admin.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div id="admin-container">
-        <h1>Admin - Edit Menu</h1>
+        <h1>Admin - Add Dish</h1>
         <form action="{{ url_for('admin_add_dish') }}" method="POST">
             <label for="dish_name">Dish Name:</label>
             <input type="text" id="dish_name" name="dish_name" required>
