manage orders update

--- a/pizzapastawebtemplate/templates/operator.html
+++ b/pizzapastawebtemplate/templates/operator.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="operator-container">
-        <h1>Operator - Open Orders</h1>
+        <h1>Manage Orders</h1>
         <table>
             <thead>
                 <tr>
